# SAT

./: .gitignore  7  CMakeLists.txt  README.md
app/: main.cpp
src/: 7  logger.hpp  parser.hpp  solver.cpp  solver.hpp  solver_types.hpp  tags  temp  temp.txt
test/: check_model.py  model_file.txt  run_tests.sh
test/all_unsat_200/: uuf200-010.cnf
